# washing-machine-iot

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  mqtt_config.py  pyproject.toml
api/: __init__.py
api/v1/: __init__.py  feedback.py  login.py  reservations.py  router.py  user.py  washing_machines.py
api/v1/models/: base_response.py  reservation_model.py  washing_machine_model.py
api/v1/routes/: __init__.py  feedback.py  health.py  login.py  washing_machines.py
core/: __init__.py  config.py  firebase_app.py
db/: init_data.json  rs-init.sh
mongo_scripts/: rs-init.sh
service/: __init__.py  firestore_service.py  mqtt_service.py
service/firestore_service/: firestore_service.py  reservation_service.py  washing_machines_service.py
service/helpers/: datetime_helper.py
service/mongo_service/: base_service.py  mongo_service.py  reservation_service.py  washing_machines_service.py
tests/api/routes/: test_feedback.py  test_login.py
