[tool.poetry]
name = "washing-machine-api"
version = "0.1.0"
description = ""
authors = ["Franco N. Merenda <merenda.franco83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.0.3"
qrcode = "^7.4.2"
paho-mqtt = "^1.6.1"
websockets = "^12.0"
pymongo = "^4.6.1"
motor = "^3.3.2"
httpx = "^0.27.0"
mongomock = "^4.1.2"
setuptools = "^58.0.4"
patch = "^1.16"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
black = "^23.11.0"
mypy = "*"
ruff = "*"
isort = "*"


[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
